syntax = "proto3";

package auth;

option go_package = "auth.v1;";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc VerifyAction(VerifyToken) returns (VerifyResponse);
}

message RegisterRequest {
  string email = 1;
  string login = 2;
  string passwd = 3;
}

message RegisterResponse {
  int32 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string passwd = 2;
}

message LoginResponse {
  string token = 1;
}

message VerifyToken {
  string token = 1;
}

message VerifyResponse {
  bool allowed = 1;
}